# chemcrab

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: ci.yml
benches/: reaction.rs  smiles.rs
src/: aromaticity.rs  atom.rs  bond.rs  canonical.rs  chirality.rs  conjugation.rs  element.rs  formula.rs  graph_ops.rs  hybridization.rs  hydrogen.rs  kekulize.rs  lib.rs  mol.rs  radical.rs  rings.rs  strip.rs  substruct.rs  tests.rs  traits.rs  valence.rs  wrappers.rs
src/reaction/: error.rs  mod.rs  parser.rs  runner.rs  writer.rs
src/smarts/: error.rs  mod.rs  parser.rs  query.rs  writer.rs
src/smiles/: builder.rs  error.rs  mod.rs  parse_tree.rs  tokenizer.rs  writer.rs
tests/: approval.rs  canonical_exhaustive.rs  canonical_properties.rs  hybridization_approval.rs
tests/approval_data/: aromaticity.json  canonical_smiles.json  formula_weight.json  hybridization.json  rings.json  smarts.json  substruct.json  valence.json
