[package]
name = "chemcrab"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A cheminformatics library for Rust"

[dependencies]
petgraph = "0.8.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "reaction"
harness = false

[[bench]]
name = "smiles"
harness = false
